src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"
@import url('https://fonts.googleapis.com/css2?family=Harmattan&display=swap')

$penny-green: #637C76
$penny-green-invert: #fff

$primary: $penny-green
$primary-invert: $penny-green-invert
$body-color: #333
$black: #2b2523
$font-stack: Harmattan, sans serif

body
  font-family: 100% $font-stack
  overflow-x: hidden




.navbar .navbar-menu
  box-shadow:none !important

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  color: #637C76
  
  justify-content: left
  align-items: center
  li
    padding: 7px 10px 6px
    margin: 2px
    vertical-align: text-bottom
    line-height: 13px
    font-size: 18px
    color: #545454
    font-weight: 600
    text-align: center
    border-style: solid
    border-color: #545454
    
    border-radius: 15px
    border-width: 1px

// Helper Classes
.full-width-image-container
  width: 100vw
  position: relative
  background-size: contain
  background-position: top
  display: flex
  justify-content: center
  align-items: center 
  background-image: url("/banner.jpg")
  

.full-width-image
    width: 100vw
    background-size: contain
    background-position: bottom
    display: flex
    justify-content: center
    align-items: center
  

.btn
    display: inline-block
    padding: 12px 16px 10px
    font-size: 18px
    font-size: 1rem
    line-height: 1.25
    background-color: #fff
    border-radius: .25rem
    text-decoration: none
    font-weight: 700
    color: #CC3700
    text-align: center
    -webkit-box-shadow: inset 0 0 0 2px #CC3700
    box-shadow: inset 0 0 0 2px #f40
    -webkit-transition: all .15s ease
    transition: all .15s ease



.margin-top-0
  margin-top: 0 !important

.navbar-item .icon
  color: $primary
// Override for use of svg's from https://simpleicons.org/
.icon svg
  width: 1.5rem
  height: 1.5rem
  fill: currentColor
.navbar-brand .navbar-item.logo
  padding: 0 1rem
.footer
  background-color: #637C76
.footer.footer
  padding: 3rem 0rem 0rem
  background-color: #637C76

//Menu overrides
$menu-item-color: #F6F1F1
$menu-item-hover-color: $black !important
$menu-item-hover-background-color: $black
$menu-item-active-color: $penny-green-invert

$menu-list-border-left: 1px solid $penny-green-invert



.menu-label
  font-size: 1em !important
  text-align: left
.menu-list
  list-style: none !important
  text-align: left
.social
  padding: 0em
.social a
    padding: .5em .5em .3em .5em
    border-radius: 1em
    background-color: #637C76
    margin: .5em
    width: 1em
    height: 1em
    vertical-align: middle
    display: inline

// blog roll
.blog-list-item.is-featured
  background-color: #d6400033;
.blog-list-item header
  position: relative
  bottom: -1px
.blog-list-item.featuredthumbnail
  width: 100%
  border-top-left-radius: calc(0.25rem - 1px)
  border-top-right-radius: calc(0.25rem - 1px)





@import "~bulma"


// responsiveness
+tablet-only
  .body
    font-family: Harmattan
  .blog-list-item .featured-thumbnail
    flex-basis: 50%
    min-height: 300px
  .column.is-4
    width: 50%

+mobile
  .body
    font-family: Harmattan
    margin: 0px
  .blog-list-item.box
    min-height: 42vh
    max-height: 97vh
    max-width: 59vh
    height: 53vh
    width: 100%
  .blog-list-item header
    display: block
  .blog-list-item .featured-thumbnail
    text-align: center
    max-width: 100%
    margin: 0
  .author-bio
    font-size: x-small
  .description
    visibility: hidden
  .button
    visibility: hidden
  .column
    display: block
    flex-basis: 0
    flex-grow: 1
    flex-shrink: 1
    padding: 0.75rem
    margin: 13px
  a.courses
    font-family: Harmattan
  .marquee
    padding-bottom: 10px
    
  
    

.author-bio



.marquee
  padding-bottom: 0px
  margin: 25px
  white-space: nowrap
  overflow: hidden
  animation: marquee 10s linear infinite

@keyframes marquee
  0%
    transform: translate(100%, 0)

  100%
    transform: translate(-100%, 0)


html
  background-color: #F6F1F1
   

.notification
  background-color: #F6F1F1
  border-radius: 4px
  position: relative
  padding: 0px




.subhead
  max-height: 100px
  font-family: Harmattan, sans-serif
  text-align: center


.is-size-1
  font-size: 6rem


.author-footer
  text-align: center

.courses
  border: .1em solid
  font-family: Hatton semibold
  font-weight: 800
  font-size: 20px
  color: #545454
  padding: 10px
  background-color: #E2D2CF
  border-color: #637C76
  animation: bouncy 2s infinite linear
  position: relative



.button
  background-color: #F6F1F1
  border-color: #637C76
  border-width: 1px
  justify-content: center
  padding-bottom: calc(0.5em - 1px
  text-align: center
  font-size: 20px
  bottom: 21px
  position: absolute
  font-family: Harmattan 
  font-weight: 600
  width: 89%

h6
  font-size: 17px



.herobanner
  align-items: center
  background-position: center center
  background-size: cover
  display: flex
  justify-content: center
  overflow: hidden
  position: relative
  width: 100%

//footer

.footer-title h4 
  font-style: normal
  font-weight: bold
  font-size: 19px
  line-height: 27px
  color: #F6F1F1
  text-transform: inherit
  font-family: Harmattan


.email 
  border-bottom: 2px solid #000
  position: relative

.email input 
  padding: 0px
  box-shadow: none
  background: none !important
  font-size: 32px
  border: 0px
  border-radius: 0px
  width: 92%
  font-family: inherit
  color: #F6F1F1

.email input::placeholder
  color: #F6F1F1
  opacity: 0.8

.email input::-internal-autofill-selected
  background-color: #637C76

.fa-arrow-right 
  position: absolute
  right: 0px
  top: 20px
  font-size: 30px

.form-control
  display: block
  width: 100%
  height: calc(1.5em + .75rem + 2px)
  font-weight: 400
  line-height: 1.5
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out
  outline: none

p.footer-para,
p.far-away 
  line-height: 16px
  color: #ffffff

p.footer-para 

  padding: 8px 0px
  line-height: 23px
  color: #4f4f4f
  font-size: 20px
  font-weight: bold
  text-transform: inherit

.footer-title h4 

  font-style: normal
  font-weight: bold
  font-size: 19px
  line-height: 27px
  color: #F6F1F1
  text-transform: inherit

.footer-link li a 

  font-style: normal
  font-weight: normal
  font-size: 20px
  line-height: 27px
  color: #F6F1F1
  font-weight: bold

.footer-link li 

  padding: 0px 0px 15px 9px
  text-align: left

.footer-link li a:hover 

  color: #000

.copyright-border 

  border-top: 2px solid #d6d6d6
  position: relative
  top: -15px

ul.footer-social li 

 display: inline-block
  margin-right: 15px

ul.footer-social li a 

  display: inline-block
  position: relative
  margin: 0 auto 0 auto
  -moz-border-radius: 50%
  -webkit-border-radius: 50%
  border-radius: 50%
  text-align: center
  width: 32px
  height: 32px
  font-size: 14px
  background: #f2f2f2

.social
  background-color: #637C76

.header-contents
  max-height: 267px
  height: 267px
  width: 100%
  padding: 13px

.fa-arrow-right
  color: #F6F1F1

